# mist

./: .gitignore  .gitmodules  Makefile  README.md  darts-v2021.cls  lipics-v2021.cls  mist.cabal  mystylefile.pandoc  stack.yaml  template.latex  tutorial.tex
Docker/: Dockerfile  horsat2
fstar-tests/: accessControl.fst  dijkstra-tick.fst  flar.fst  incr.fst  incrState.fst  linearDSL.fst  mochi-d2.fst  sum.fst  tick-append-ghost.fst  tick.fst
lib/Language/Mist/: Asm.hs  CGen.hs  Checker.hs  Compiler.hs  Config.hs  Fresh.hs  Names.hs  Normalizer.hs  Parser.hs  Runner.hs  Test.hs  ToFixpoint.hs  Types.hs  UX.hs  Uniqify.hs  Utils.hs
mochi-tests/: .gitignore  acl.hors  acl.horsat_out  acl.json  acl.ml  acl.smt2  acl.sol  d2.hors  d2.horsat_out  d2.json  d2.ml  d2.smt2  d2.sol  d2.status  forSigma.hors  forSigma.horsat_out  forSigma.json  forSigma.ml  forSigma.smt2  forSigma.sol  forSigma.status  incr00.hors  incr00.horsat_out  incr00.json  incr00.ml  incr00.smt2  incr00.sol  incrState.hors  incrState.horsat_out  incrState.json  incrState.ml  incrState.status  pointersMap_noalias.hors  pointersMap_noalias.horsat_out  pointersMap_noalias.json  pointersMap_noalias.ml  pointersMap_noalias.smt2  pointersMap_noalias.sol  pointersMap_noalias.status  pointersRefs_noalias.hors  (+11 more)
scripts/: cps.rkt  pretty-print-horn.rkt
tests/: Main.hs  Test.hs  Utils.hs
tests/Integration/: Tests.hs
tests/Integration/neg/: Bool00.hs  Int00.hs
tests/Integration/todo/: err-large-00.hs  err-large-01.hs  err-tc-01.hs  err-tc-03.hs  list-3.hs  neg01.hs  print1.hs
tests/Tests/: Main.hs  SimpleTypes.hs  Utils.hs
tests/Tests/Integration/: Tests.hs
tests/Tests/Integration/neg/: Inc01.hs  append.hs  linearTypes.hs  mochi-d2.hs  pagination3.hs  paginationTokens.hs  ticktick.hs
tests/Tests/Integration/pos/: Inc02.hs  Int00.hs  a-test-update.hs  abs.hs  abz.hs  acl.hs  app-succ.hs  app-succ0.hs  for.hs  forSigma.hs  fun.hs  hrts.hs  idr_intro.hs  idr_login.hs  idr_login_simpl.hs  incr00.hs  incrState.hs  incrStatePoly.hs  ispolyMin.hs  mochi-app-lin-ord2.hs  mochi-app-lin-ord3.hs  mochi-app-succ.hs  mochi-d2.hs  mochi-fhnhn  mochi-fhnhn.hs  omega.hs  paginationTokens.hs  pair.hs  pointers_noalias.hs  recursion.hs  repeat-add.hs  repeat.hs  revoke.hs  sigmas.hs  statemachine.hs  subset.hs  sum.hs  tick-append.hs  tick.hs  ticktock.hs  (+6 more)
tests/Tests/Integration/todo/: Inc01.hs  adds.hs  bool-eq-0.hs  cps.hs  err-not-defined.hs  err-shadow-bind.hs  err-tc-05.hs  expr3.hs  for.hs  forSigma.hs  gt-r.hs  idr_intro.hs  idr_login.hs  implicitData.hs  lam-00.hs  lam-01.hs  lam-03.hs  lam-05.hs  linear.hs  linearTypes.hs  list-1.hs  list-2.hs  list-full.hs  map.hs  mochi-a-max.hs  mochi-app-succ.hs  mochi-fhnhn.hs  mochi-l-isort.hs  mochi-l-len-append.hs  mul-l.hs  paginationTokens.hs  pointers_noalias.hs  print0.hs  print2.hs  revoke.hs  shillSet.hs  subs.hs  swapList.hs  tabs_with_ifun.hs  tick-append.hs  (+5 more)
tests/Tests/Language/Mist/: CGen.hs  Checker.hs  Names.hs
tests/input/: abs.hs  add1-e.hs  add2.hs  bool0.hs  bool1.hs  bool3.hs  bool4.hs  eq-l.hs  eq-r.hs  err-arity.hs  err-eq.hs  err-list-occurs.hs  err-occurs.hs  err-swapList.hs  err-tc-00.hs  err-tc-04.hs  err-unbound-01.hs  exp00.hs  expr0.hs  expr1.hs  expr2.hs  expr4.hs  fac.hs  foldl.hs  gt-l.hs  incr.hs  lam-02.hs  lam-06.hs  lets.hs  list-0.hs  list-4.hs  lists.hs  lt-r.hs  neg00.hs  nyi.hs  oflow00.hs  oflow01.hs  sub-l.hs  sub-r.hs  sub1-e.hs  (+5 more)
tests/neg/: Abs.hs  Inc00.hs  Int01.hs  annlet.hs  append.hs  loop.hs  paginationTokens.hs  unannotatedRecursion.hs  uninterp.hs
tests/pos/: Inc00.hs  Inc01.hs  Inc02.hs  Int00.hs  a-max.hs  abs.hs  abz.hs  acl.hs  annlet.hs  assert.hs  assume.hs  idr_intro.hs  idr_login.hs  idr_login_simpl.hs  idr_login_without_readSecret.hs  incr00.hs  incrState.hs  incrStatePoly.hs  linearTypes.hs  magicalPi.hs  mochi-app-leq.hs  mochi-app-succ0.hs  narrowing.hs  one.hs  pagination.hs  pagination2.hs  paginationTokens.hs  pointers_noalias.hs  recursion.hs  subset.hs  tabs_with_ifun.hs  tcp_client.hs.bak  ticktock3.hs  uninterp.hs
tests/todo/: add-l.hs  anf-breaks-things.hs  bool-eq-1.hs  bool2.hs  err-list.hs  err-poly-00.hs  err-tc-02.hs  err-unbound-00.hs  fib.hs  for.hs  if2.hs  lam-04.hs  lt-l.hs  mochi-a-checksum.hs  mochi-a-test-upd.hs  mochi-d2.hs  mochi-d3.hs  mochi-l-forall-leq.hs  mochi-repeat-add.hs  mul-r.hs  multiPi.hs  pagination3.hs  print3.hs  shillSet.hs
