name:                garter
version:             0.1.0.0
synopsis:            Starter code for compiler-fer-de-lance
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     Language.Garter.Utils,
                       Language.Garter.UX,
                       Language.Garter.Types,
                       Language.Garter.Parser,
                       Language.Garter.Checker,
                       Language.Garter.Normalizer,
                       Language.Garter.Asm,
                       Language.Garter.Compiler,
                       Language.Garter.Runner

  -- other-extensions:
  build-depends:       array, base,
                       containers,
                       pretty,
                       cmdargs,
                       process,
                       directory,
                       semigroups,
                       megaparsec,
                       filepath,
                       tasty, tasty-hunit, tasty-rerun, process, text


  hs-source-dirs:      lib
  default-language:    Haskell2010

Executable garter

  default-language:    Haskell2010
  ghc-options:         -W -threaded
  main-is:             Main.hs
  hs-source-dirs:      bin
  build-depends:       base,
                       garter

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    tasty,
                    tasty-hunit,
                    tasty-rerun,
                    text,
                    garter
