name:                mist 
version:             0.1.0.0
synopsis:            Small language for experimenting with Liquid Types 
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     Language.Mist.Utils,
                       Language.Mist.UX,
                       Language.Mist.Types,
                       Language.Mist.Parser,
                       Language.Mist.Checker,
                       Language.Mist.CGen,
                       Language.Mist.Uniqify,
                       Language.Mist.Normalizer,
                       Language.Mist.Runner,
                       Language.Mist.Test

  -- other-extensions:
  build-depends:       array, base,
                       containers,
                       pretty,
                       cmdargs,
                       process,
                       directory,
                       semigroups,
                       megaparsec,
                       filepath,
                       tasty, 
                       tasty-hunit, 
                       tasty-rerun, 
                       tasty-ant-xml,
                       process, 
                       text,
                       mtl,
                       liquid-fixpoint

  hs-source-dirs:      lib
  default-language:    Haskell2010
  -- build-tools:         alex, happy
  -- other-modules:       Language.Garter.Lexer


Executable mist 
  default-language:    Haskell2010
  ghc-options:         -W -threaded
  main-is:             Main.hs
  hs-source-dirs:      bin
  build-depends:       base,
                       directory,
                       filepath,
                       tasty,
                       tasty-hunit,
                       tasty-rerun,
                       tasty-ant-xml,
                       text,
                       mist 

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    tasty,
                    tasty-hunit,
                    tasty-rerun,
                    tasty-ant-xml,
                    text,
                    mist
