name:                mist 
version:             0.1.0.0
synopsis:            Small language for experimenting with Liquid Types 
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     Language.Mist.Utils,
                       Language.Mist.UX,
                       Language.Mist.Types,
                       Language.Mist.Parser,
                       Language.Mist.Checker,
                       Language.Mist.CGen,
                       Language.Mist.Config,
                       Language.Mist.ToFixpoint,
                       Language.Mist.Names,
                       Language.Mist.Normalizer,
                       Language.Mist.Runner

  -- other-extensions:
  build-depends:       array, base,
                       containers,
                       -- TODO: just use unordered (Hashable instances)
                       unordered-containers,
                       pretty,
                       cmdargs,
                       process,
                       directory,
                       semigroups,
                       megaparsec,
                       parser-combinators,
                       filepath,
                       process, 
                       text,
                       transformers, mtl,
                       split,
                       liquid-fixpoint,
                       deepseq

  hs-source-dirs:      lib
  default-language:    Haskell2010
  -- build-tools:         alex, happy
  -- other-modules:       Language.Garter.Lexer


Executable mist 
  default-language:    Haskell2010
  ghc-options:         -W -threaded
  main-is:             Main.hs
  hs-source-dirs:      bin
  build-depends:       base,
                       directory,
                       filepath,
                       cmdargs,
                       text,
                       mist

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Main.hs
  build-depends:    base,
                    directory,
                    filepath,
                    tasty,
                    tasty-hunit,
                    tasty-rerun,
                    tasty-ant-xml,
                    text,
                    megaparsec,
                    mist,
                    liquid-fixpoint
  other-modules:    Tests.Utils,
                    Tests.Integration.Tests,
                    Tests.Language.Mist.Names
                    Tests.Language.Mist.Checker
                    Tests.Language.Mist.CGen
                    Tests.SimpleTypes
